<resources>
    <string name="app_name">Calendar</string>
    <string name="inicio">Inicio</string>
    <string name="Mapa">Mapa</string>
    <string name="calendario">Calendario</string>
    <string name="hola">Hola</string>
    <string name="material_calendar_monday">Lu</string>
    <string name="material_calendar_tuesday">Ma</string>
    <string name="material_calendar_wednesday">Mi</string>
    <string name="material_calendar_thursday">Ju</string>
    <string name="material_calendar_friday">Vi</string>
    <string name="material_calendar_saturday">Sa</string>
    <string name="material_calendar_sunday">Do</string>
    <string name="titulo">Titulo: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="dia">Dia: </string>
    <string name="aceptar">Añadir</string>
    <string name="hora">Hora:</string>
    <string name="localizacion">Localizacion:</string>
    <string name="ErrorCampoIncorrecto">Algun Campo es incorrecto</string>
    <string name="eventosHoy">Eventos de hoy: </string>
    <string name="eventoAgregado">Evento agregado correctamente </string>
    <string name="noEventos">No hay eventos hoy</string>
    <string name="Eventos">Eventos del dia:</string>
    <string name="rellenarDia">Rellena el campo de fecha</string>
    <string name="NotificacionBorrado">Evento borrado correctamente</string>
    <array name="material_calendar_months_array">


        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>